// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextAreaInput /> should match snapshot for active select input 1`] = `
<EnhancedInput(TextAreaInputComponent)
  className="textarea-input-class"
  placeholder="placeholder something"
>
  <div
    className="root textarea-input-class"
  >
    <NotchedBase
      isActive={true}
      isEmpty={false}
      placeholder="placeholder something"
    >
      <div
        className="notchedBase notchedBaseShift notchedBaseActive"
      >
        <TextAreaInputComponent
          eventHandlers={
            Object {
              "onBlur": [Function],
              "onChange": [Function],
              "onFocus": [Function],
            }
          }
          field={
            Object {
              "className": "input",
              "disabled": false,
              "id": undefined,
              "name": undefined,
              "value": "Test value",
            }
          }
          validation={
            Object {
              "isTouched": undefined,
              "isValid": undefined,
            }
          }
        >
          <textarea
            autoComplete="off"
            className="input"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            value="Test value"
          />
        </TextAreaInputComponent>
        <div
          className="notchedBaseBorder"
        >
          <div
            className="notchedBaseBorderLeading"
          />
          <div
            className="notchedBaseBorderNotch"
            style={
              Object {
                "width": 16,
              }
            }
          >
            <label
              className="notchedBasePlaceholder"
            >
              placeholder something
            </label>
          </div>
          <div
            className="notchedBaseBorderTrailing"
          />
        </div>
      </div>
    </NotchedBase>
  </div>
</EnhancedInput(TextAreaInputComponent)>
`;

exports[`<TextAreaInput /> should match snapshot for default textarea input 1`] = `
<div
  class="root textarea-input-class"
>
  <div
    class="notchedBase"
  >
    <textarea
      autocomplete="off"
      class="input"
    />
    <div
      class="notchedBaseBorder"
    >
      <div
        class="notchedBaseBorderLeading"
      />
      <div
        class="notchedBaseBorderNotch"
        style="width:0"
      >
        <label
          class="notchedBasePlaceholder"
        >
          placeholder something
        </label>
      </div>
      <div
        class="notchedBaseBorderTrailing"
      />
    </div>
  </div>
</div>
`;

exports[`<TextAreaInput /> should match snapshot for touched invalid select input 1`] = `
<div
  class="root textarea-input-class invalid withStatus"
>
  <div
    class="notchedBase"
  >
    <textarea
      autocomplete="off"
      class="input"
    />
    <div
      class="notchedBaseBorder"
    >
      <div
        class="notchedBaseBorderLeading"
      />
      <div
        class="notchedBaseBorderNotch"
        style="width:0"
      >
        <label
          class="notchedBasePlaceholder"
        >
          placeholder something
        </label>
      </div>
      <div
        class="notchedBaseBorderTrailing"
      />
    </div>
  </div>
</div>
`;

exports[`<TextAreaInput /> should match snapshot for touched select input 1`] = `
<div
  class="root textarea-input-class"
>
  <div
    class="notchedBase"
  >
    <textarea
      autocomplete="off"
      class="input"
    />
    <div
      class="notchedBaseBorder"
    >
      <div
        class="notchedBaseBorderLeading"
      />
      <div
        class="notchedBaseBorderNotch"
        style="width:0"
      >
        <label
          class="notchedBasePlaceholder"
        >
          placeholder something
        </label>
      </div>
      <div
        class="notchedBaseBorderTrailing"
      />
    </div>
  </div>
</div>
`;

exports[`<TextAreaInput /> should match snapshot for touched valid select input 1`] = `
<div
  class="root textarea-input-class valid withStatus"
>
  <div
    class="notchedBase"
  >
    <textarea
      autocomplete="off"
      class="input"
    />
    <div
      class="notchedBaseBorder"
    >
      <div
        class="notchedBaseBorderLeading"
      />
      <div
        class="notchedBaseBorderNotch"
        style="width:0"
      >
        <label
          class="notchedBasePlaceholder"
        >
          placeholder something
        </label>
      </div>
      <div
        class="notchedBaseBorderTrailing"
      />
    </div>
  </div>
</div>
`;
